# flask-pytesst-bdd-and-openapi-libs

./: .dockerignore  .gitignore  MIGRATION.md  README.md  products-openapi.json  pyproject.toml  requirements.txt  settings.json
modules/hr/: Dockerfile  pytest.ini
modules/hr/src/hr/: app.py  blueprint.py  models.py  schemas.py  service.py
modules/hr/src/hr/api/areas/: blueprint.py  schemas.py
modules/hr/src/hr/api/employees/: blueprint.py  schemas.py
modules/hr/src/hr/application/: area_service.py  employee_service.py  event_bus.py
modules/hr/src/hr/domain/: events.py
modules/hr/src/hr/domain/area/: commands.py  model.py  repository.py
modules/hr/src/hr/domain/employee/: commands.py  model.py  repository.py
modules/hr/tests/: conftest.py  hr_steps.py  test_areas_create.py  test_areas_manage.py  test_employees_area_seeded.py  test_employees_create.py  test_employees_deactivate.py  test_employees_list.py  test_employees_manager.py  test_employees_promote.py
modules/hr/tests/features/: areas_create.feature  areas_manage.feature  employees_create.feature  employees_deactivate.feature  employees_list.feature  employees_manager.feature  employees_promote.feature
modules/lib/: __init__.py  config.py  fixtures.py  infra.py  openapi.py
modules/lib/mssql/: Dockerfile
modules/lib/openapi-flask-utils/lib/: openapi.py  swagger_ui.html
modules/lib/pytest-bdd-utils/lib/: assertions.py  client.py  config.py  fixtures.py  infra.py
modules/products/: Dockerfile  pytest.ini
modules/products/src/products/: app.py  blueprint.py  models.py  schemas.py  service.py
modules/products/tests/: conftest.py  product_steps.py  test_create_product.py  test_delete_product.py  test_list_products.py  test_update_product.py
modules/products/tests/features/: create_product.feature  delete_product.feature  list_products.feature  update_product.feature
scripts/: gen_openapi.py
