# ============================================================
# flask-bdd — Flask BDD integration testing template
# Tools: uv + ruff + pyright + pydantic v2
# Python 3.12+
# ============================================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-bdd"
version = "0.1.0"
description = "Flask BDD integration testing template with testcontainers, OpenAPI, and Pydantic v2"
authors = [{ name = "Giovanni de Almeida Martins", email = "giovannidealmeidamartins@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0,<3",
    "boto3>=1.35",
    "psycopg2-binary>=2.9",
    "pymssql>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff",
    "poethepoet",
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "testcontainers[postgres,localstack,mssql]>=4.0",
]

[tool.setuptools.packages.find]
where = [
    "modules/hr/src",
    "modules/products/src",
    "modules/lib/openapi-flask-utils",
    "modules/lib/pytest-bdd-utils",
]

# ============================================================
# POE THE POET - Task Runner
# ============================================================
[tool.poe.tasks]
format = [
    {cmd = "ruff format ."},
    {cmd = "ruff check . --fix"},
]
check = [
    {cmd = "ruff check ."},
    {cmd = "pyright"},
]
lint = {cmd = "ruff check . --fix"}
lint-unsafe = {cmd = "ruff check . --fix --unsafe-fixes"}

# ============================================================
# RUFF CONFIGURATION
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "PERF",   # perflint
    "RET",    # flake8-return
]

ignore = [
    "E501",    # line too long (formatter handles this)
    "RET504",  # unnecessary assignment before return (readability preference)
    "SIM108",  # ternary instead of if-else (readability preference)
    "N999",    # invalid module name (our lib modules use generic names)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# conftest.py files must manipulate sys.path before importing project modules
"modules/*/tests/conftest.py" = ["E402"]
"modules/*/tests/**/*.py" = [
    "S101",    # assert in tests is expected
    "PLR2004", # magic values in tests
    "N802",    # function names in steps are descriptive
    "N803",    # argument names in steps
    "B011",    # assert false
]
"modules/lib/**/*.py" = [
    "N802",    # lib functions use descriptive names
]

[tool.ruff.lint.isort]
known-first-party = ["hr", "products", "lib"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# PYRIGHT CONFIGURATION
# ============================================================
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = [
    "modules/hr/src",
    "modules/products/src",
    "modules/lib",
]
extraPaths = [
    "modules/hr/src",
    "modules/products/src",
    "modules/lib/openapi-flask-utils",
    "modules/lib/pytest-bdd-utils",
    "modules/hr/tests",
    "modules/products/tests",
]
exclude = [
    "**/__pycache__",
    ".git",
    ".venv",
    "venv",
]
venvPath = "."
venv = ".venv"

reportMissingImports = true
reportUndefinedVariable = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportGeneralTypeIssues = true
reportUnusedImport = "warning"

# ============================================================
# PYTEST CONFIGURATION
# ============================================================
[tool.pytest.ini_options]
testpaths = [
    "modules/hr/tests",
    "modules/products/tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ============================================================
# COVERAGE CONFIGURATION
# ============================================================
[tool.coverage.run]
source = [
    "modules/hr/src",
    "modules/products/src",
    "modules/lib",
]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
